src/sass/components/_benefits.scss
.benefits {
  margin-bottom: 13rem;

  &__header {
    margin-bottom: 8.6rem;
    font-size: 3.6rem;
    text-align: center;

    @media screen and (max-width: 54rem) {
      margin-bottom: 4.6rem;
      font-size: 3rem;
    }
  }

  &__inner {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    @media screen and (max-width: 54rem) {
      display: block;
    }
  }

  &__box {
    margin-bottom: 5.5rem;
    margin-right: 5.1rem;
    // float: left;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
  }

  &__bullet {
    margin-right: 3.1rem;
    // float: left;
    width: 6.9rem;
    height: 140%;

    img {
      width: 100%;
    }

    // &:after {
    //   content: "";
    //   clear: both;
    //   display: table;
    // }
  }

  &__box-header {
    margin-bottom: 2.1rem;
  }

  &__box-par {
    max-width: 46.5rem;
    font-size: 1.6rem;
    line-height: 1.5;

    @media screen and (max-width: 54rem) {
      line-height: 1.42;
      font-size: 1.65rem;
    }
  }
}

